# slam_lite

./: .gitignore  CMakeLists.txt  README.md
config/: default.yaml
doc/: todolist.txt
include/: FASTDetector.h  ORBextractor.h  backend.h  camera.h  common_include.h  config.h  feature.h  frame.h  frontend.h  keyPoint.h  map.h  mapPoint.h  orb_self.h  setting.h  system.h
src/: FASTDetector.cpp  ORBextractor.cpp  camera.cpp  config.cpp  feature.cpp  frame.cpp  frontend.cpp  keyPoint.cpp  mappoint.cpp  orb_cv.cpp  orb_self.cpp  test.cpp
test/: CMakeLists.txt  orb_self.cpp
test/ORBextractor/: CMakeLists.txt  test_orbextractor.cpp
test/frontend/: CMakeLists.txt  test_frontend  test_frontend.cpp
test/slam_lite/: CMakeLists.txt  mono.cpp
test/spdlog/: CMakeLists.txt  test_spdlog.cpp
test/spdlog/log/: log.txt
test/triangulation/: CMakeLists.txt  test_triangulation.cpp
